<resources>
    <string name="app_name">Moony</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="chart">Chart</string>
    <string name="categories">Categories</string>
    <string name="rate_us">Rate us</string>
    <string name="share">Share</string>
    <string name="in_progress">In progress</string>
    <string name="completed">Completed</string>
    <string name="goal">Goals</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="add_transaction">Add transaction</string>
    <string name="save">Save</string>
    <string name="select_category">Select category</string>
    <string name="write_note">Write note</string>
    <string name="today">Today</string>
    <string name="tab_to_add_one">No Transactions\nTap \'+\' to add one</string>
    <string name="add_goal">Add Goal</string>
    <string name="no_goals_tab_to_add_one">You still have no goals\nTap \'+\' to add one</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="add_categories">Add categories</string>
    <string name="transaction">Transaction</string>
    <string name="saving_goals">Saving goals</string>
    <string name="select_month">Select month</string>
    <string name="transaction_detail">Transaction Details</string>
    <string name="manage_your_spending_and_savings">Manage your spending and savings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="saved">Saved</string>
    <string name="remaining">Remaining</string>
    <string name="total">Total</string>
    <string name="history_saving">History</string>
    <string name="empty">Empty</string>
    <string name="add_income_category">Add income category</string>
    <string name="add_expense_category">Add expense category</string>

    <string name="education">Education</string>
    <string name="electronics">Electronics</string>
    <string name="entertainment">Entertainment</string>
    <string name="family">Family</string>
    <string name="fitness">Fitness</string>
    <string name="food">Food</string>
    <string name="furniture">Furniture</string>
    <string name="income">Income</string>
    <string name="life">Life</string>
    <string name="medical">Medical</string>
    <string name="shopping">Shopping</string>
    <string name="transportation">Transportation</string>
    <string name="due_date">Due date: </string>
    <string name="empty_error">This field cannot be empty</string>
    <string name="empty_date_error">Please select date</string>
    <string name="empty_category_error">Please select category</string>
    <string name="please_add_title">Please add title for category</string>
    <string name="please_select_icon">Please select icon</string>
    <string name="add">Add</string>
    <string name="expenses">Expenses</string>
    <string name="warning">Warning</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="notice_delete_transaction">Do you really want to delete this transaction ?</string>
    <string name="notice_delete_category">Do you really want to delete this category and delete ALL transaction about it ?</string>
    <string name="notice_delete_saving">Do you really want to delete this saving goal ?</string>
    <string name="add_saving_history">How much did you save?</string>
    <string name="date">Date :</string>
    <string name="get_money_out">Get the money out</string>
    <string name="more_money_in">More money in</string>
    <string name="more">More</string>
    <string name="your_balance">Your Balance</string>
    <string name="income_title">Income :</string>
    <string name="expenses_title">Expenses:</string>
    <string name="update_goal">Update Goal</string>
    <string name="update_transaction">Update Transaction</string>
    <string name="settings">Settings</string>

    <string name="notification">Notification</string>
    <string name="invite_friends">Invite friends</string>
    <string name="give_us_feedback">Give us feedback</string>
    <!--    <string name="rate_us">Rate us</string>-->
    <!--    <string name="about">About</string>-->

    <string name="currency_unit">Currency unit</string>
    <string name="for_developer">For developer</string>


    <string-array name="currency">
        <item>none</item>
        <item>$</item>
        <item>vnd</item>
    </string-array>
    <string name="select_icon">Select icon</string>
    <string name="empty_icon_error">Please select icon</string>
    <string name="change_your_icon">Change your icon</string>
    <string name="exist_name_error">This name already exists</string>
    <string name="saving">Saving</string>
    <string name="money_in">Money in</string>
    <string name="money_out">Money out</string>
    <string name="add_to">Add to</string>
    <string name="savings">Savings</string>
    <string name="title">Title</string>
    <string name="take_money_out_of_savings" translatable="false">Take money out of savings</string>
    <string name="books">Books</string>
    <string name="phones">Phones</string>
    <string name="games">Games</string>
    <string name="cinema">Cinema</string>
    <string name="baby">Baby</string>
    <string name="pet">Pets</string>
    <string name="fitnesss">Fitness</string>
    <string name="foods">Foods</string>
    <string name="drinks">Drinks</string>
    <string name="repair">Repair</string>
    <string name="travel">Travel</string>
    <string name="lover">Love</string>
    <string name="medicine">Medicine</string>
    <string name="shoppingg">Shopping</string>
    <string name="bus_ticket">Bus ticket</string>
    <string name="train_ticket">Train ticket</string>
    <string name="plane_ticket">Plane ticket</string>
    <string name="taxi" translatable="false">Taxi</string>
    <string name="parking">Parking</string>
    <string name="snacks">Snacks</string>
    <string name="health_check">Health check</string>
    <string name="refuel">Refuel</string>
    <string name="loan">Loan</string>
    <string name="other">Other</string>
    <string name="atm" translatable="false">ATM</string>
    <string name="insurrance">Insurrance</string>
    <string name="bill">Bill</string>
    <string name="wedding">Wedding</string>
    <string name="rent">Rent</string>
    <string name="clothes">Clothes</string>
    <string name="footwear">Foot wear</string>
    <string name="party">Party</string>
    <string name="charity">Charity</string>
    <string name="dues" translatable="false">Dues</string>
    <string name="sell">Sell things</string>
    <string name="bank_interest">Bank interest</string>
    <string name="bonus">Money bonus</string>
    <string name="monthly_salary">Monthly salary</string>
    <string name="all">All</string>
    <string name="no_item_chart">No item chart</string>
    <string name="redundancy">Redundancy</string>
    <string name="no_item">No item</string>
    <string name="by_income">Filtered by income</string>
    <string name="by_expenses">Filtered by expenses</string>
    <string name="alert">Alert</string>
    <string name="create_transaction_alert">Do you really want to create this transaction?</string>
    <string name="transaction_greater_than_balance_alert">Your income is lower than </string>
    <string name="copied_link_to_clipbroad">Copied link to clipboard</string>
    <string name="money">Money</string>
    <string name="time">Time</string>
    <string name="day">Day</string>
    <string name="days">Days</string>
    <string name="expired">Expired</string>
    <string name="exceeds_the_amount">The amount you entered exceeds the amount left in your savings</string>

</resources>