<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_chart"
            android:title="@string/chart"
            android:icon="@drawable/ic_pie_chart"
            />
        <item
            android:id="@+id/nav_categories"
            android:title="@string/categories"
            android:icon="@drawable/ic_categories"/>
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/share"
                android:icon="@drawable/ic_share"
                />
            <item
                android:id="@+id/nav_rate_us"
                android:title="@string/rate_us"
                android:icon="@drawable/ic_star"/>
        </menu>
    </item>

</menu>
