<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mnu_budget"
        style="@style/Widget.Moony.MenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onMenuItemClick"
        android:text="@string/transaction"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/mnu_saving"
        style="@style/Widget.Moony.MenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onMenuItemClick"
        android:text="@string/saving_goals" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mnu_chart"
        style="@style/Widget.Moony.MenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onMenuItemClick"
        android:text="@string/chart" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mnu_categories"
        style="@style/Widget.Moony.MenuItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onMenuItemClick"
        android:text="@string/categories" />
</merge>