<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root_add_goal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.saving.AddSavingGoalFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_add_saving_goal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_add_saving_goal"
            style="@style/Widget.Moony.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/save_menu"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/add_goal" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/appbar_add_saving_goal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_goal_description"
                style="@style/Widget.Moony.TextInputLayout.OutlineBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                app:counterEnabled="true"
                app:counterMaxLength="100"
                app:errorEnabled="true"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_goal_description"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:maxLength="100" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInput_goal_amount"
                style="@style/Widget.Moony.TextInputLayout.OutlineBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:hint="@string/amount"
                app:errorEnabled="true"
                app:layout_constraintTop_toBottomOf="@id/textInput_goal_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_goal_amount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:maxLength="12" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/layout_goal_calendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInput_goal_amount">

                <ImageView
                    android:id="@+id/img_goal_calendar"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_calendar" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_due_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:hint="@string/due_date"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/img_goal_calendar"
                    app:layout_constraintTop_toBottomOf="@id/textInput_goal_amount" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_goal_categories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_goal_calendar">

                <ImageView
                    android:id="@+id/img_goal_category"
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_unknown" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_title_category_add_saving"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:hint="@string/select_category"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_16sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/img_goal_calendar"
                    app:layout_constraintTop_toBottomOf="@id/textInput_goal_amount" />
            </LinearLayout>

            <!--<ImageView
                android:id="@+id/img_saving_goals"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_200sdp"
                android:layout_marginTop="@dimen/_30sdp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_default_goal_pic"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layout_goal_categories"
                app:layout_constraintVertical_bias="0.0" />-->
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>