<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SavingChartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_130sdp"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginRight="@dimen/_8sdp"
            app:cardBackgroundColor="?android:windowBackground"
            app:cardCornerRadius="@dimen/_10sdp"
            app:cardElevation="@dimen/_3sdp">

            <RelativeLayout
                android:layout_width="@dimen/_280sdp"
                android:layout_height="@dimen/_120sdp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_2sdp"
                android:layout_marginRight="@dimen/_2sdp"
                android:background="@android:color/transparent"
                android:padding="@dimen/_5sdp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_title_saving_chart1"
                    style="@style/Widget.Moony.Headline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/goal"
                    tools:ignore="RelativeOverlap" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_title_saving_chart2"
                    style="@style/Widget.Moony.Headline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_title_saving_chart1"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/in_progress" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_title_saving_chart3"
                    style="@style/Widget.Moony.Headline5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_title_saving_chart2"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="@string/completed" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_total_goal"
                    style="@style/Widget.Moony.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="0" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_total_in_progress"
                    style="@style/Widget.Moony.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_total_goal"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="0" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_total_completed"
                    style="@style/Widget.Moony.Headline6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_total_in_progress"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:text="0" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rev_saving_chart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_8sdp" />
    </LinearLayout>
</ScrollView>
